<resources>
    <string name="app_name">Tut7_Task1</string>
    <string name="cocktails">Cocktails</string>
    <string name="enter_a_cocktail_name">Enter a Cocktail Name</string>
    <string name="enter_a_ingredient_name">Enter a Ingredient Name</string>
    <string name="search">Search</string>
    <string name="search_by_cocktail_name">Search By Cocktail Name</string>
    <string name="get_random_cocktail">Get Random Cocktail</string>
    <string name="search_by_cocktail_Ingredient">Search By Ingredient</string>
</resources>